--- a/sip-servlets-arquillian-testsuite/simple-tc7/pom.xml
+++ b/sip-servlets-arquillian-testsuite/simple-tc7/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -24,6 +23,6 @@
 		<module>ShootmeTelURLSipServletTest-tc7</module>
 		<module>ShootmeSipServletTest-tc7</module>
 		<module>ShootistSipServletTest-tc7</module>
-	</modules>
+  </modules>
 
 </project>
