--- a/management/sip-servlets-management/pom.xml
+++ b/management/sip-servlets-management/pom.xml
@@ -150,6 +150,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-client</artifactId>
+			<version>1.8.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-annotations</artifactId>
 			<version>1.8.0-SNAPSHOT</version>
 			<scope>provided</scope>
