--- a/pom.xml
+++ b/pom.xml
@@ -92,8 +92,8 @@
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.FINAL</mobicents.tools.mavenplugin.eclipse.version>
 		<mobicents.cluster.version>1.13.1.FINAL</mobicents.cluster.version>
 		<mobicents.balancer.version>1.6.0-SNAPSHOT</mobicents.balancer.version>
-		<mobicents.jain.sip.ha.version>1.3.1.FINAL</mobicents.jain.sip.ha.version>
-		<mobicents.jain.sip.ext.version>1.1</mobicents.jain.sip.ext.version>
+		<mobicents.jain.sip.ha.version>1.4.0-SNAPSHOT</mobicents.jain.sip.ha.version>
+		<mobicents.jain.sip.ext.version>1.2-SNAPSHOT</mobicents.jain.sip.ext.version>
 	</properties>
 
 	<dependencies>
