--- a/management/sip-servlets-management/src/main/webapp/WEB-INF/web.xml
+++ b/management/sip-servlets-management/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,7 @@
-<web-app version="2.5"
-   xmlns="http://java.sun.com/xml/ns/javaee"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-	<display-name>Sample</display-name>	
-	
-	<!-- Uncomment if you want to secure the management console 
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+  <display-name>Sample</display-name>
+  <!-- Uncomment if you want to secure the management console 
 	 <security-constraint>
      <web-resource-collection>
        <web-resource-name>HtmlAdaptor</web-resource-name>
@@ -25,8 +22,34 @@
    <security-role>
       <role-name>JBossAdmin</role-name>
    </security-role>-->
-	
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
+  <!--inserted by gwt-maven-->
+  <servlet>
+    <servlet-name>org.mobicents.servlet.management.server.router.DARConfigurationServiceImpl/org.mobicents.servlet.management.SipServletsManagement/DARConfigurationService</servlet-name>
+    <servlet-class>org.mobicents.servlet.management.server.router.DARConfigurationServiceImpl</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>org.mobicents.servlet.management.server.configuration.ConfigurationServiceImpl/org.mobicents.servlet.management.SipServletsManagement/ConfigurationService</servlet-name>
+    <servlet-class>org.mobicents.servlet.management.server.configuration.ConfigurationServiceImpl</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>org.mobicents.servlet.management.server.deploy.DeploymentServiceImpl/org.mobicents.servlet.management.SipServletsManagement/DeploymentService</servlet-name>
+    <servlet-class>org.mobicents.servlet.management.server.deploy.DeploymentServiceImpl</servlet-class>
+  </servlet>
+  <!--inserted by gwt-maven-->
+  <servlet-mapping>
+    <servlet-name>org.mobicents.servlet.management.server.router.DARConfigurationServiceImpl/org.mobicents.servlet.management.SipServletsManagement/DARConfigurationService</servlet-name>
+    <url-pattern>/org.mobicents.servlet.management.SipServletsManagement/DARConfigurationService</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>org.mobicents.servlet.management.server.configuration.ConfigurationServiceImpl/org.mobicents.servlet.management.SipServletsManagement/ConfigurationService</servlet-name>
+    <url-pattern>/org.mobicents.servlet.management.SipServletsManagement/ConfigurationService</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>org.mobicents.servlet.management.server.deploy.DeploymentServiceImpl/org.mobicents.servlet.management.SipServletsManagement/DeploymentService</servlet-name>
+    <url-pattern>/org.mobicents.servlet.management.SipServletsManagement/DeploymentService</url-pattern>
+  </servlet-mapping>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
 </web-app>
+
