--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -118,8 +118,8 @@
 		
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
-			<artifactId>annotations-api</artifactId>
-			<version>${tomcat.version}</version>
+			<artifactId>tomcat-annotations-api</artifactId>
+			<version>${tomcat-7.version}</version>
 			<scope>provided</scope>
 		</dependency>
 				
