--- a/sip-servlets-test-suite/testsuite/src/test/resources/org/mobicents/servlet/sip/testsuite/testsuite.properties
+++ b/sip-servlets-test-suite/testsuite/src/test/resources/org/mobicents/servlet/sip/testsuite/testsuite.properties
@@ -5,7 +5,8 @@
 #tomcat.home=E:/servers/apache-tomcat-6.0.14
 #project.home=E:/workspaces/sip-servlets
 #jeand linux props
-tomcat.home=/home/jean/servers/MSS/mss-1.8.0-SNAPSHOT-apache-tomcat-7.0.27
+#tomcat.home=/home/jean/servers/MSS/mss-1.8.0-SNAPSHOT-apache-tomcat-7.0.27
+tomcat.home=/home/jean/servers/MSS/tomcat-7.0.27
 tomcat.backup.home=/home/jean/servers/tomcat-7.0.27-backup
 project.home=/home/jean/workspaces/sip-servlets
 
