--- a/sip-servlets-examples/conference-demo-jsr309/pom.xml
+++ b/sip-servlets-examples/conference-demo-jsr309/pom.xml
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>org.mobicents.jsr309</groupId>
 			<artifactId>mobicents-jsr309-impl</artifactId>
-			<version>2.0.0.BETA5</version>
+			<version>2.4.0.FINAL</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
